@@ -11,38 +11,38 @@ class DDS_MT_Event_Connector_T
 {
     //square
     virtual
-    typename CCM_TYPE::writer_type::_ptr_type
+    typename CCM_TYPE::suppier_sq_traits::data_type::_ptr_type
     get_supplier_sq_data (void)
     {
-      return CCM_TYPE::writer_type::_nil ();
+      return CCM_TYPE::suppier_sq_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datawriter_type::_ptr_type
+    typename CCM_TYPE::suppier_sq_traits::dds_entity_type::_ptr_type
     get_supplier_sq_dds_entity (void)
     {
-      return CCM_TYPE::datawriter_type::_nil ();
+      return CCM_TYPE::suppier_sq_traits::dds_entity_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::getter_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_sq_traits::fresh_data_type::_ptr_type
     get_pull_consumer_sq_fresh_data (void)
     {
-      return CCM_TYPE::getter_type::_nil ();
+      return CCM_TYPE::pull_consumer_sq_traits::fresh_data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_sq_traits::data_type::_ptr_type
     get_pull_consumer_sq_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::pull_consumer_sq_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_sq_traits::dds_entity_type::_ptr_type
     get_pull_consumer_sq_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::pull_consumer_sq_traits::dds_entity_type::_nil ();
     }
 
     virtual
@@ -84,56 +84,56 @@ class DDS_MT_Event_Connector_T
     }
 
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_sq_traits::data_type::_ptr_type
     get_push_consumer_sq_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::push_consumer_sq_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datalistenercontrol_type::_ptr_type
+    typename CCM_TYPE::push_consumer_sq_traits::data_control_type::_ptr_type
     get_push_consumer_sq_data_control (void)
     {
-      return CCM_TYPE::datalistenercontrol_type::_nil ();
+      return CCM_TYPE::push_consumer_sq_traits::data_control_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_sq_traits::dds_entity_type::_ptr_type
     get_push_consumer_sq_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::push_consumer_sq_traits::dds_entity_type::_nil ();
     }
 
 //triangel
     virtual
-    typename CCM_TYPE::writer_type::_ptr_type
+    typename CCM_TYPE::supplier_tr_traits::data_type::_ptr_type
     get_supplier_tr_data (void)
     {
-      return CCM_TYPE::writer_type::_nil ();
+      return CCM_TYPE::supplier_tr_traits::data_type::_nil ();
     }
     virtual
-    typename CCM_TYPE::datawriter_type::_ptr_type
+    typename CCM_TYPE::supplier_tr_traits::dds_entity_type::_ptr_type
     get_supplier_tr_dds_entity (void)
     {
-      return CCM_TYPE::datawriter_type::_nil ();
+      return CCM_TYPE::supplier_tr_traits::dds_entity_type::_nil ();
     }
     virtual
-    typename CCM_TYPE::getter_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_tr_traits::fresh_data_type::_ptr_type
     get_pull_consumer_tr_fresh_data (void)
     {
-      return CCM_TYPE::getter_type::_nil ();
+      return CCM_TYPE::pull_consumer_tr_traits::fresh_data_type::_nil ();
     }
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_tr_traits::data_type::_ptr_type
     get_pull_consumer_tr_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::pull_consumer_tr_traits::data_type::_nil ();
     }
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_tr_traits::dds_entity_type::_ptr_type
     get_pull_consumer_tr_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::pull_consumer_tr_traits::dds_entity_type::_nil ();
     }
 
     virtual
@@ -174,60 +174,60 @@ class DDS_MT_Event_Connector_T
     }
 
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_tr_traits::data_type::_ptr_type
     get_push_consumer_tr_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::push_consumer_tr_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datalistenercontrol_type::_ptr_type
+    typename CCM_TYPE::push_consumer_tr_traits::data_control_type::_ptr_type
     get_push_consumer_tr_data_control (void)
     {
-      return CCM_TYPE::datalistenercontrol_type::_nil ();
+      return CCM_TYPE::push_consumer_tr_traits::data_control_type::_nil ();
     }
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_tr_traits::dds_entith_type::_ptr_type
     get_push_consumer_tr_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::push_consumer_tr_traits::dds_entith_type::_nil ();
     }
 
   //circle
 
     virtual
-    typename CCM_TYPE::writer_type::_ptr_type
+    typename CCM_TYPE::supplier_cq_traits::data_type::_ptr_type
     get_supplier_cq_data (void)
     {
-      return CCM_TYPE::writer_type::_nil ();
+      return CCM_TYPE::supplier_cq_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datawriter_type::_ptr_type
+    typename CCM_TYPE::supplier_cq_traits::dds_entity_type::_ptr_type
     get_supplier_cq_dds_entity (void)
     {
-      return CCM_TYPE::datawriter_type::_nil ();
+      return CCM_TYPE::supplier_cq_traits::dds_entity_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::getter_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_cq_traits::fresh_data_type::_ptr_type
     get_pull_consumer_cq_fresh_data (void)
     {
-      return CCM_TYPE::getter_type::_nil ();
+      return CCM_TYPE::pull_consumer_cq_traits::fresh_data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_cq_traits::data_type::_ptr_type
     get_pull_consumer_cq_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::pull_consumer_cq_traits::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::pull_consumer_cq_traits::dds_entity_type::_ptr_type
     get_pull_consumer_cq_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::pull_consumer_cq_traits::dds_entity_type::_nil ();
     }
 
     virtual
@@ -268,24 +268,24 @@ class DDS_MT_Event_Connector_T
     }
 
     virtual
-    typename CCM_TYPE::reader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_cq::data_type::_ptr_type
     get_push_consumer_cq_data (void)
     {
-      return CCM_TYPE::reader_type::_nil ();
+      return CCM_TYPE::push_consumer_cq::data_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datalistenercontrol_type::_ptr_type
+    typename CCM_TYPE::push_consumer_cq::data_control_type::_ptr_type
     get_push_consumer_cq_data_control (void)
     {
-      return CCM_TYPE::datalistenercontrol_type::_nil ();
+      return CCM_TYPE::push_consumer_cq::data_control_type::_nil ();
     }
 
     virtual
-    typename CCM_TYPE::datareader_type::_ptr_type
+    typename CCM_TYPE::push_consumer_cq::dds_entity_type::_ptr_type
     get_push_consumer_cq_dds_entity (void)
     {
-      return CCM_TYPE::datareader_type::_nil ();
+      return CCM_TYPE::push_consumer_cq::dds_entity_type::_nil ();
     }
 };
 
